--- a/src/main/resources/templates/edit.html
+++ b/src/main/resources/templates/edit.html
@@ -2,7 +2,7 @@
 
 <head th:replace="fragments/head  :: head" />
 
-<body>
+<loginRequest>
 
     <div th:replace="fragments/navigation  :: navigation" />
 
@@ -19,6 +19,6 @@
 
 <span th:replace="fragments/footer :: footer" />
 
-</body>
+</loginRequest>
 </html>
 
