--- a/src/main/resources/templates/fragments/navbar/header.html
+++ b/src/main/resources/templates/fragments/navbar/header.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
-<body>
+<loginRequest>
 
             <div class="navbar-header" th:fragment="header">
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -12,5 +12,5 @@
                 <a class="navbar-brand" th:href="@{/}">Example µService</a>
             </div>
 
-</body>
+</loginRequest>
 </html>
