FileService-Klasse erstellt, Kleinigkeiten in der GUI

--- a/frontend/src/app/vendorInformation/add-files/add-files.component.html
+++ b/frontend/src/app/vendorInformation/add-files/add-files.component.html
@@ -1,1 +1,4 @@
-<h1>Test.AddFiles</h1>
+<div class="panel panel-default">
+    <div class="panel-heading">Dateien hinzufügen</div>
+    <div class="panel-body">Panel Content</div>
+</div>
