--- a/frontend/src/app/vendorInformation/detailed-description/vendor-detailed-discription.component.html
+++ b/frontend/src/app/vendorInformation/detailed-description/vendor-detailed-discription.component.html
@@ -1,1 +1,4 @@
-<h1>Test.DetailedDiscription</h1>
+<div class="panel panel-default">
+    <div class="panel-heading">Ausführliche Beschreibung</div>
+    <div class="panel-body">Panel Content</div>
+</div>
