--- a/frontend/src/app/vendorInformation/profile-pic/vendor-profile-pic.component.html
+++ b/frontend/src/app/vendorInformation/profile-pic/vendor-profile-pic.component.html
@@ -1,1 +1,25 @@
-<h1>Test.ProfilePic</h1>
+<p>{{title}}</p>
+<p><img src="../mock-files/cat.jpg" class="img-rounded" alt="profile pic" width="250" height="250"></p>
+
+<button type="button" class="btn btn-default btn-lg" data-toggle="modal" data-target="#myModal"><span class="glyphicon glyphicon-folder-open"></span>      Auswahl</button>
+
+<!-- Modal -->
+<div id="myModal" class="modal fade" role="dialog">
+    <div class="modal-dialog">
+
+        <!-- Modal content-->
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                <h4 class="modal-title">Modal Header</h4>
+            </div>
+            <div class="modal-body">
+                <p>Some text in the modal.</p>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+            </div>
+        </div>
+
+    </div>
+</div>
