--- a/frontend/src/app/vendorInformation/short-description/vendor-short-discription.component.html
+++ b/frontend/src/app/vendorInformation/short-description/vendor-short-discription.component.html
@@ -1,1 +1,4 @@
-<h1>Test.ShortDiscription</h1>
+<div class="panel panel-default">
+    <div class="panel-heading">Kurzbeschreibung</div>
+    <div class="panel-body">Panel Content</div>
+</div>
