--- a/frontend/src/app/vendorInformation/main/vendor-info-main.component.html
+++ b/frontend/src/app/vendorInformation/main/vendor-info-main.component.html
@@ -1,13 +1,39 @@
 <!-- Gesamtansicht der Vendorinformation -->
 
-<vendor-info-profile-pic></vendor-info-profile-pic>
 
-<vendor-short-discription></vendor-short-discription>
+<div class="container-fluid">
+    <div class="row-fluid">
+        <div class="col-md-12">
+            <div class="jumbotron">
+                <h1>{{vendorName}}</h1>
+                <vendor-info-profile-pic></vendor-info-profile-pic>
+            </div>
+        </div>
+    </div>
 
-<vendor-detailed-discription></vendor-detailed-discription>
-
-<add-files></add-files>
-
-<vendor-sort-files></vendor-sort-files>
-
-<vendor-notes></vendor-notes>
+    <div class="row-fluid">
+        <div class="col-md-12">
+            <vendor-short-discription></vendor-short-discription>
+        </div>
+    </div>
+    <div class="row-fluid">
+        <div class="col-md-12">
+            <vendor-detailed-discription></vendor-detailed-discription>
+        </div>
+    </div>
+    <div class="row-fluid">
+        <div class="col-md-12">
+            <vendor-notes></vendor-notes>
+        </div>
+    </div>
+    <div class="row-fluid">
+        <div class="col-md-12">
+            <add-files></add-files>
+        </div>
+    </div>
+    <div class="row-fluid">
+        <div class="col-md-12">
+            <vendor-sort-files></vendor-sort-files>
+        </div>
+    </div>
+</div>
