--- a/frontend/src/app/vendorInformation/notes/vendor-notes.html
+++ b/frontend/src/app/vendorInformation/notes/vendor-notes.html
@@ -1,1 +1,4 @@
-<h1>Test.Notes</h1>
+<div class="panel panel-default">
+    <div class="panel-heading">Stichpunkte</div>
+    <div class="panel-body">Panel Content</div>
+</div>
