--- a/frontend/src/app/vendorInformation/sort-files/vendor-sort-files.component.html
+++ b/frontend/src/app/vendorInformation/sort-files/vendor-sort-files.component.html
@@ -1,1 +1,4 @@
-<h1>Test.SortFiles</h1>
+<div class="panel panel-default">
+    <div class="panel-heading">Dateien sortieren</div>
+    <div class="panel-body">Panel Content</div>
+</div>
