--- a/frontend/src/app/appView/app.component.html
+++ b/frontend/src/app/appView/app.component.html
@@ -48,9 +48,12 @@
     <div class="container">
         <div class="row">
             <div class="col-md-11">
+                <div class="container kv-main">
                 <!-- Hier einen Schalter für die Anzeige hinzufügen-->
-            <fileupload-view></fileupload-view>
+                    <fileupload-view></fileupload-view>
+                    <filedatatable-view></filedatatable-view>
                 </div>
+            </div>
             </div>
         </div>
 </div>
