--- a/frontend/src/app/appView/app.component.html
+++ b/frontend/src/app/appView/app.component.html
@@ -48,7 +48,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-11">
-                <div class="container kv-main">
+                <div class="render-content-container">
                 <!-- Hier einen Schalter für die Anzeige hinzufügen-->
                     <fileupload-view></fileupload-view>
                     <filedatatable-view></filedatatable-view>
