Routing zu Anbieterinfo hinzugefügt

--- a/frontend/src/app/appView.html
+++ b/frontend/src/app/appView.html
@@ -18,12 +18,11 @@
             <ul class="nav navbar-nav side-nav">
                 <li [routerLinkActive]="['active']"><a [routerLink]="['/']"><img src="img/logo.jpg" class="logo"></a></li>
                 <li [routerLinkActive]="['active']"><a [routerLink]="['/upload-center']"><i class="fa fa-fw fa-cloud-upload" aria-hidden="true"></i> Dateiverwaltung</a></li>
-                <li><a href="#"><i class="fa fa-fw fa-cloud-upload" aria-hidden="true"></i> Anbieter</a></li>
+                <li [routerLinkActive]="['active']"><a [routerLink]="['/anbieterinformationen']"><i class="fa fa-fw fa-cloud-upload" aria-hidden="true"></i> Anbieter</a></li>
                 <li><a href="#"><i class="fa fa-fw fa-cloud-upload" aria-hidden="true"></i> Produkte</a></li>
             </ul>
         </div>
     </nav>
-
     <div id="page-wrapper">
         <div class="container-fluid">
             <router-outlet></router-outlet>
