Added some more frontend content

--- a/frontend/src/app/vendorInformation/add-files/add-files.component.html
+++ b/frontend/src/app/vendorInformation/add-files/add-files.component.html
@@ -1,4 +1,18 @@
 <div class="panel panel-default">
     <div class="panel-heading">Dateien hinzufügen</div>
-    <div class="panel-body">Panel Content</div>
+    <div class="panel-body">
+        <div class="row">
+            <div class="col-lg-12">
+                <form>
+                    <div class="form-group">
+                        <label for="inputFile">Dateiauswahl</label>
+                        <input type="file" id="inputFile">
+                        <p class="help-block">Nur folgende Dateitypen sind erlaubt: pdf, ...</p>
+                        <p class="help-block">Die Dateien sind auf eine maximal Größe von ... beschränkt.</p>
+                    </div>
+                    <button type="submit" class="btn btn-primary">hochladen</button>
+                </form>
+            </div>
+        </div>
+    </div>
 </div>
