--- a/frontend/src/app/vendorInformation/detailed-description/vendor-detailed-discription.component.html
+++ b/frontend/src/app/vendorInformation/detailed-description/vendor-detailed-discription.component.html
@@ -1,4 +1,18 @@
 <div class="panel panel-default">
     <div class="panel-heading">Ausführliche Beschreibung</div>
-    <div class="panel-body">Panel Content</div>
+    <div class="panel-body">
+
+
+        <div class="adjoined-bottom">
+            <div class="grid-container">
+                <div class="grid-width-100">
+                    <div id="editorlong">
+                        <h1>Hello world!</h1>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
 </div>
