Added some more frontend content

--- a/frontend/src/app/frontendComponents/add-files/add-files.component.html
+++ b/frontend/src/app/frontendComponents/add-files/add-files.component.html
@@ -1,7 +1,8 @@
-<div class="panel panel-default">
-    <div class="panel-heading">Dateien hinzufügen</div>
-    <div class="panel-body">
-        <div class="row">
+<h1 class="page-header">
+    {{title}}
+    <small>{{description}}</small>
+</h1>
+
             <div class="col-lg-12">
                 <form>
                     <div class="form-group">
@@ -13,6 +14,3 @@
                     <button type="submit" class="btn btn-primary">hochladen</button>
                 </form>
             </div>
-        </div>
-    </div>
-</div>
