--- a/frontend/src/app/frontendComponents/sort-files/sort-files.component.html
+++ b/frontend/src/app/frontendComponents/sort-files/sort-files.component.html
@@ -1,8 +1,8 @@
-<div class="panel panel-default">
-    <div class="panel-heading">Dateien sortieren</div>
-    <div class="panel-body">
-
-        <div class="row">
+<h1 class="page-header">
+    {{title}}
+    <small>{{description}}</small>
+</h1>
+<div class="panel-body">
             <div class="col-lg-12">
                 <table class="table table-hover">
                     <thead>
@@ -30,7 +30,3 @@
                     </tbody>
                 </table>
             </div>
-        </div>
-
-    </div>
-</div>
