--- a/frontend/src/app/informationComponents/profile-pic/profile-pic.component.html
+++ b/frontend/src/app/informationComponents/profile-pic/profile-pic.component.html
@@ -3,7 +3,7 @@
     <small>{{description}}</small>
 </h1>
 <div class="panel-body">
-<p>{{selectedPicture}}</p>
+<p>Gewähltes Bild: {{selectedPicture}}</p>
 <button type="button" class="btn btn-default btn-lg" data-toggle="modal" data-target="#myModal"><span class="glyphicon glyphicon-folder-open"></span> Auswahl
 </button>
 
@@ -19,12 +19,13 @@
                     <h4 class="modal-title">Modal Header</h4>
                 </div>
                 <div class="modal-body">
-                    <ul class="list-group" *ngFor="let id of pictureIds" (click)="onSelect(id)">
-                        <li class="list-group-item">{{id}}</li>
+                    <ul class="list-group" *ngFor="let picture of pictures" (click)="onSelect(picture.name)">
+                        <li class="list-group-item">Bezeichnung: <b>{{picture.name}}</b> | Beschreibung: <b>{{picture.discription}}</b></li>
                     </ul>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-default" (click)="test()">TestButton</button>
                 </div>
             </div>
 
