--- a/frontend/src/app/appView.html
+++ b/frontend/src/app/appView.html
@@ -1,4 +1,5 @@
 <div id="wrapper">
+
     <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
@@ -7,7 +8,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">Anbieter Informations Management</a>
+            <!-- <a class="navbar-brand" href="#">Anbieter Informations Management</a> -->
         </div>
         <!-- Top Menu Items -->
         <ul class="nav navbar-right top-nav">
@@ -15,8 +16,10 @@
         </ul>
         <!-- Sidebar Menu Items - These collapse to the responsive navigation menu on small screens -->
         <div class="collapse navbar-collapse navbar-ex1-collapse">
+            <div class="logo-container">
+                <img src="img/logo.jpg" class="logo">
+            </div>
             <ul class="nav navbar-nav side-nav">
-                <li [routerLinkActive]="['active']"><a [routerLink]="['/']"><img src="img/logo.jpg" class="logo"></a></li>
                 <li [routerLinkActive]="['active']"><a [routerLink]="['/upload-center']"><i class="fa fa-fw fa-cloud-upload" aria-hidden="true"></i> Dateiverwaltung</a></li>
                 <li [routerLinkActive]="['active']"><a [routerLink]="['/anbieterinformationen']"><i class="fa fa-fw fa-cloud-upload" aria-hidden="true"></i> Anbieter</a></li>
                 <li [routerLinkActive]="['active']"><a [routerLink]="['/produktinformationen']"><i class="fa fa-fw fa-cloud-upload" aria-hidden="true"></i> Produkte</a></li>
