--- a/frontend/src/css/style.css
+++ b/frontend/src/css/style.css
@@ -17,9 +17,6 @@ body {
     }
 }
 
-#wrapper {
-    padding-left: 0;
-}
 
 #page-wrapper {
     width: 100%;
@@ -36,6 +33,7 @@ body {
 @media (min-width: 768px) {
     #wrapper {
         padding-left: 225px;
+        background-color: white;
     }
 
     #page-wrapper {
@@ -116,14 +114,14 @@ ul.alert-dropdown {
 @media (min-width: 768px) {
     .side-nav {
         position: fixed;
-        top: 51px;
+        top: 140px;
         left: 225px;
         width: 225px;
         margin-left: -225px;
         border: none;
-        border-radius: 0;
+        border-radius: 0px 20px 0px 0px;
         overflow-y: auto;
-        background-color: #222;
+        background-color: #f0f2f2;
         bottom: 0;
         overflow-x: hidden;
         padding-bottom: 40px;
@@ -136,7 +134,7 @@ ul.alert-dropdown {
     .side-nav li a:hover,
     .side-nav li a:focus {
         outline: none;
-        background-color: #000 !important;
+        background-color: #d6d8d6 !important;
     }
 }
 
@@ -153,6 +151,23 @@ ul.alert-dropdown {
 
 .side-nav > li > ul > li > a:hover {
     color: #fff;
+}
+.navbar-brand{
+    margin-left: 10em;
+}
+.navbar-inverse{
+    background-color: #f0f2f2;
+    border-color: #f0f2f2;;
+}
+.navbar-inverse .navbar-nav>li>a{
+    color: black;
+}
+.navbar-inverse .navbar-nav>.active>a, .navbar-inverse .navbar-nav>.active>a:focus, .navbar-inverse .navbar-nav>.active>a:hover{
+    background-color: #f0f2f2;
+    color: black;
+}
+.navbar-inverse .navbar-collapse, .navbar-inverse .navbar-form{
+    background-color: #f0f2f2;
 }
 
 /* Flot Chart Containers */
@@ -227,8 +242,14 @@ ul.alert-dropdown {
     color: #df8a13;
 }
 
+.logo-container{
+    margin-left: 30px;
+    margin-top: 10px;
+    position:absolute;
+}
+
 .logo {
-    max-width: 100% !important;
+    max-width: 120px !important;
     height: auto;
     display: block;
 }
