user components and view (still a lot to do)

--- a/frontend/src/app/appView.html
+++ b/frontend/src/app/appView.html
@@ -1,5 +1,4 @@
 <div id="wrapper">
-
     <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
@@ -23,6 +22,7 @@
                 <li [routerLinkActive]="['active']"><a [routerLink]="['/upload-center']"><i class="fa fa-fw fa-cloud-upload" aria-hidden="true"></i> Dateiverwaltung</a></li>
                 <li [routerLinkActive]="['active']"><a [routerLink]="['/anbieterinformationen']"><i class="fa fa-fw fa-cloud-upload" aria-hidden="true"></i> Anbieter</a></li>
                 <li [routerLinkActive]="['active']"><a [routerLink]="['/produktinformationen']"><i class="fa fa-fw fa-cloud-upload" aria-hidden="true"></i> Produkte</a></li>
+                <li [routerLinkActive]="['active']"><a [routerLink]="['/login']"><i class="fa fa-fw fa-cloud-upload" aria-hidden="true"></i> Login(vorübergehend) </a></li>
             </ul>
         </div>
     </nav>
