--- a/frontend/src/app/authentification/view/userview.component.html
+++ b/frontend/src/app/authentification/view/userview.component.html
@@ -4,16 +4,20 @@
         <div class="span4 offset4 well">
             <form class="form-signin">
                 <h2 class="form-signin-heading">Please sign in</h2>
+
                 <label for="inputEmail" class="sr-only">Email address</label>
-                <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
+                <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus #email />
+
                 <label for="inputPassword" class="sr-only">Password</label>
-                <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
+                <input type="password" id="inputPassword" class="form-control" placeholder="Password" required
+                #password>
+
                 <div class="checkbox">
                     <label>
                         <input type="checkbox" value="remember-me"> Remember me
                     </label>
                 </div>
-                <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+                <button class="btn btn-lg btn-primary btn-block" type="submit" (click)="onSubmit(email.value, password.value)">Sign in</button>
             </form>
         </div>
     </div>
