--- a/frontend/src/app/uploadCenter/uploadCenterView.html
+++ b/frontend/src/app/uploadCenter/uploadCenterView.html
@@ -1,12 +1,8 @@
-<h1 class="page-header">
-    {{title}}
+<h2 class="page-header">{{title}}
     <small>{{description}}</small>
-</h1>
+</h2>
 
-<div class="panel-body">
-        <h3>Hochgeladene Dateien</h3>
-
-
+<h3>Hochgeladene Dateien</h3>
 <div class="row">
     <div class="col-lg-12">
         <table class="table table-hover">
@@ -25,9 +21,9 @@
                 <td>1111</td>
                 <td>
                     <div class="btn-group" role="group">
-                        <a class="btn btn-default"><i class="fa fa-fw fa-pencil" aria-hidden="true"></i></a>
+                        <a class="btn btn-default"><i class="fa fa-refresh" aria-hidden="true"></i></a>
                         <button type="button" class="btn btn-danger">
-                            <i class="fa fa-fw fa-trash-o" aria-hidden="true"></i>
+                            <i class="fa fa-trash-o" aria-hidden="true"></i>
                         </button>
                     </div>
                 </td>
@@ -36,6 +32,7 @@
         </table>
     </div>
 </div>
+
 <div class="row">
     <div class="col-lg-12">
         <h3>Datei hochladen</h3>
@@ -53,5 +50,4 @@
             <button type="submit" class="btn btn-primary">hochladen</button>
         </form>
     </div>
-</div>
 </div>
