--- a/frontend/src/app/authentification/view/userview.component.html
+++ b/frontend/src/app/authentification/view/userview.component.html
@@ -8,7 +8,7 @@
                 <label for="inputEmail" class="sr-only">Email address</label>
                 <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus #email />
 
-                <label for="inputPassword" class="sr-only">Password</label>
+                <label for="inputPa1ssword" class="sr-only">Password</label>
                 <input type="password" id="inputPassword" class="form-control" placeholder="Password" required
                 #password>
 
@@ -18,6 +18,9 @@
                     </label>
                 </div>
                 <button class="btn btn-lg btn-primary btn-block" type="submit" (click)="onSubmit(email.value, password.value)">Sign in</button>
+                <button class="btn btn-lg btn-primary btn-block" type="submit" (click)="test1()">Token</button>
+                <button class="btn btn-lg btn-primary btn-block" type="submit" (click)="test2()">User</button>
+                <button class="btn btn-lg btn-primary btn-block" type="submit" (click)="logout()">Logout</button>
             </form>
         </div>
     </div>
