--- a/frontend/src/app/uploadCenter/uploadCenterView.html
+++ b/frontend/src/app/uploadCenter/uploadCenterView.html
@@ -5,6 +5,7 @@
 <h3>Hochgeladene Dateien</h3>
 <div class="row">
     <div class="col-lg-12">
+        {{files}}
         <table class="table table-hover">
             <thead>
             <tr>
