--- a/frontend/src/app/authentification/userview.component.html
+++ b/frontend/src/app/authentification/userview.component.html
@@ -1,4 +1,3 @@
-
 <div class="col-lg-12">
     <div class="row">
         <div class="span4 offset4 well">
@@ -18,7 +17,7 @@
                         <input type="checkbox" value="remember-me"> Remember me
                     </label>
                 </div>
-                <button class="btn btn-lg btn-primary btn-block" type="submit" (click)="login(email.value, password.value)">Sign in</button>
+              <button class="btn btn-lg btn-primary btn-block" type="submit" (click)="login()">Sign in</button>
                 <button class="btn btn-lg btn-primary btn-block" type="submit" (click)="test1()">Token</button>
                 <button class="btn btn-lg btn-primary btn-block" type="submit" (click)="test2()">User</button>
                 <button class="btn btn-lg btn-primary btn-block" type="submit" (click)="logout()">Logout</button>
