--- a/frontend/src/app/authentification/view/userview.component.html
+++ b/frontend/src/app/authentification/view/userview.component.html
@@ -8,7 +8,7 @@
                 <label for="inputEmail" class="sr-only">Email address</label>
                 <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus #email />
 
-                <label for="inputPa1ssword" class="sr-only">Password</label>
+                <label for="inputPassword" class="sr-only">Password</label>
                 <input type="password" id="inputPassword" class="form-control" placeholder="Password" required
                 #password>
 
