--- a/frontend/src/app/authentification/userview.component.html
+++ b/frontend/src/app/authentification/userview.component.html
@@ -1,30 +1,22 @@
-<div class="col-lg-12">
-    <div class="row">
-        <div class="span4 offset4 well">
-          {{user | json}}
-            <form class="form-signin">
-                <h2 class="form-signin-heading">Please sign in</h2>
-
-                <label for="inputEmail" class="sr-only">Email address</label>
-                <input type="text" id="inputEmail" class="form-control" placeholder="Email address" required autofocus #email />
-
-                <label for="inputPassword" class="sr-only">Password</label>
-                <input type="password" id="inputPassword" class="form-control" placeholder="Password" required
-                #password>
-
-                <div class="checkbox">
-                    <label>
-                        <input type="checkbox" value="remember-me"> Remember me
-                    </label>
-                </div>
-              <button class="btn btn-lg btn-primary btn-block" type="submit" (click)="login()">Sign in</button>
-                <button class="btn btn-lg btn-primary btn-block" type="submit" (click)="test1()">Token</button>
-                <button class="btn btn-lg btn-primary btn-block" type="submit" (click)="test2()">User</button>
-                <button class="btn btn-lg btn-primary btn-block" type="submit" (click)="logout()">Logout</button>
-            </form>
-        </div>
-    </div>
+<div class="row">
+  <div class="col-md-12">
+    <h2 class="page-header">Login</h2>
+  </div>
 </div>
-
-
-
+<form>
+  <div class="row">
+    <div class="col-md-offset-4 col-md-4">
+      <div class="form-group">
+        <label for="email">E-Mail Adresse</label>
+        <input type="email" class="form-control" id="email" placeholder="E-Mail Adresse" name="email"
+               [(ngModel)]="email">
+      </div>
+      <div class="form-group">
+        <label for="password">Password</label>
+        <input type="password" class="form-control" id="password" placeholder="Passwort" name="password"
+               [(ngModel)]="password">
+      </div>
+      <button class="btn btn-lg btn-primary btn-block" type="submit" (click)="login()">Anmelden</button>
+    </div>
+  </div>
+</form>
