Add proper guard to guard the other routes

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -11,7 +11,7 @@
     </div>
     <!-- Top Menu Items -->
     <ul class="nav navbar-right top-nav">
-      <li><a href="">logout and stuff</a></li>
+      <li><a [routerLink]="['/login']">Login</a></li>
     </ul>
     <!-- Sidebar Menu Items - These collapse to the responsive navigation menu on small screens -->
     <div class="collapse navbar-collapse navbar-ex1-collapse">
@@ -19,15 +19,21 @@
         <img src="img/logo.jpg" class="logo">
       </div>
       <ul class="nav navbar-nav side-nav">
-        <li [routerLinkActive]="['active']"><a [routerLink]="['/upload-center']"><i
-          class="fa fa-fw fa-cloud-upload" aria-hidden="true"></i> Dateiverwaltung</a></li>
-        <li [routerLinkActive]="['active']"><a [routerLink]="['/anbieterinformationen']">
-          <i class="fa fa-fw fa-users" aria-hidden="true"></i> Anbieter</a></li>
-        <li [routerLinkActive]="['active']"><a [routerLink]="['/produktinformationen']">
-          <i class="fa fa-fw fa-phone" aria-hidden="true"></i> Produkte</a></li>
-        <li [routerLinkActive]="['active']"><a [routerLink]="['/login']">
-          <i class="fa fa-fw fa-cloud-upload" aria-hidden="true"></i>
-          Login(vorübergehend) </a></li>
+        <li [routerLinkActive]="['active']">
+          <a [routerLink]="['/upload-center']">
+            <i class="fa fa-fw fa-cloud-upload" aria-hidden="true"></i> Dateiverwaltung
+          </a>
+        </li>
+        <li [routerLinkActive]="['active']">
+          <a [routerLink]="['/vendor-info']">
+            <i class="fa fa-fw fa-users" aria-hidden="true"></i> Anbieter
+          </a>
+        </li>
+        <li [routerLinkActive]="['active']">
+          <a [routerLink]="['/product-info']">
+            <i class="fa fa-fw fa-phone" aria-hidden="true"></i> Produkte
+          </a>
+        </li>
       </ul>
     </div>
   </nav>
