--- a/frontend/src/app/authentification/userview.component.html
+++ b/frontend/src/app/authentification/userview.component.html
@@ -1,9 +1,9 @@
-<div class="row">
+<div class="row" *ngIf="loginResponse == null">
   <div class="col-md-12">
     <h2 class="page-header">Login</h2>
   </div>
 </div>
-<form>
+<form *ngIf="loginResponse == null">
   <div class="row">
     <div class="col-md-offset-4 col-md-4">
       <div class="form-group">
@@ -20,3 +20,15 @@
     </div>
   </div>
 </form>
+
+<div class="row" *ngIf="loginResponse != null">
+  <div class="col-md-12">
+    <h2 class="page-header">Logout</h2>
+  </div>
+</div>
+
+<div class="row" *ngIf="loginResponse != null">
+  <div class="col-md-12">
+    <a class="btn btn-lg btn-primary btn-block" (click)="logout()">Abmelden</a>
+  </div>
+</div>
