--- a/frontend/src/app/authentification/userview.component.html
+++ b/frontend/src/app/authentification/userview.component.html
@@ -3,9 +3,12 @@
     <h2 class="page-header">Login</h2>
   </div>
 </div>
-<form *ngIf="loginResponse == null">
+<form *ngIf="loginResponse == null" (ngSubmit)="login()">
   <div class="row">
     <div class="col-md-offset-4 col-md-4">
+      <div class="alert alert-danger" *ngIf="error != ''">
+        {{error}}
+      </div>
       <div class="form-group">
         <label for="email">E-Mail Adresse</label>
         <input type="email" class="form-control" id="email" placeholder="E-Mail Adresse" name="email"
@@ -16,7 +19,7 @@
         <input type="password" class="form-control" id="password" placeholder="Passwort" name="password"
                [(ngModel)]="password">
       </div>
-      <button class="btn btn-lg btn-primary btn-block" type="submit" (click)="login()">Anmelden</button>
+      <button class="btn btn-primary" type="submit">Anmelden</button>
     </div>
   </div>
 </form>
