--- a/frontend/src/app/authentification/userview.component.html
+++ b/frontend/src/app/authentification/userview.component.html
@@ -32,6 +32,6 @@
 
 <div class="row" *ngIf="loginResponse != null">
   <div class="col-md-12">
-    <a class="btn btn-lg btn-primary btn-block" (click)="logout()">Abmelden</a>
+    <a class="btn btn-primary" (click)="logout()">Abmelden</a>
   </div>
 </div>
