--- a/frontend/src/app/informationComponents/vendorInfo.component.html
+++ b/frontend/src/app/informationComponents/vendorInfo.component.html
@@ -1,6 +1,4 @@
-<!-- Gesamtansicht der Vendorinformation -->
-
-
+{{vendor | json}}
 <div class="container-fluid">
     <div class="row-fluid">
         <div class="col-md-12">
