--- a/frontend/src/app/informationComponents/vendorInfo.component.html
+++ b/frontend/src/app/informationComponents/vendorInfo.component.html
@@ -1,38 +1,39 @@
-{{vendor | json}}
-<div class="container-fluid">
-    <div class="row-fluid">
-        <div class="col-md-12">
-            <h1>{{vendorName}}</h1>
-        </div>
-    </div>
-    <div class="row-fluid">
-        <div class="col-md-12">
-          <vendor-info-profile-pic></vendor-info-profile-pic>
-        </div>
-    </div>
-    <div class="row-fluid">
-        <div class="col-md-12">
-            <vendor-short-discription></vendor-short-discription>
-        </div>
-    </div>
-    <div class="row-fluid">
-        <div class="col-md-12">
-            <vendor-detailed-discription></vendor-detailed-discription>
-        </div>
-    </div>
-    <div class="row-fluid">
-        <div class="col-md-12">
-            <vendor-notes></vendor-notes>
-        </div>
-    </div>
-    <div class="row-fluid">
-        <div class="col-md-12">
-            <add-files></add-files>
-        </div>
-    </div>
-    <div class="row-fluid">
-        <div class="col-md-12">
-            <vendor-sort-files></vendor-sort-files>
-        </div>
-    </div>
+<div class="row">
+  <div class="col-md-12">
+    <h2 class="page-header">
+      {{vendor.name}}
+      <small>{{vendor.id}}</small>
+    </h2>
+  </div>
 </div>
+
+{{vendor | json}}
+
+<div class="row">
+  <div class="col-md-12">
+    <vendor-info-profile-pic></vendor-info-profile-pic>
+  </div>
+</div>
+
+<div class="row">
+  <div class="col-md-12">
+    <h3 class="page-header">
+      <i class="fa fa-file-text-o" aria-hidden="true"></i> Kurzbeschreibung
+      <small [innerHtml]="description"></small>
+    </h3>
+  </div>
+</div>
+
+<div class="row" *ngIf="renderShortDescription">
+  <div class="col-md-12">
+    <ckeditor
+      [(ngModel)]="vendor.shortDescription"
+      (change)="onChange($event)"
+      (ready)="onReady($event)"
+      (focus)="onFocus($event)"
+      (blur)="onBlur($event)"
+      debounce="1000">
+    </ckeditor>
+  </div>
+</div>
+
