Add Action buttons to vendor edit page, not functional yet!

--- a/frontend/src/app/informationComponents/vendorInfo.component.html
+++ b/frontend/src/app/informationComponents/vendorInfo.component.html
@@ -7,13 +7,14 @@
   </div>
 </div>
 
-{{vendor | json}}
-
-<div class="row">
+<div class="row bottom-space">
   <div class="col-md-12">
-    <vendor-info-profile-pic></vendor-info-profile-pic>
+    <a class="btn btn-primary"><i class="fa fa-floppy-o" aria-hidden="true"></i> Speichern</a>
+    <a class="btn btn-warning"><i class="fa fa-ban" aria-hidden="true"></i> Verwerfen</a>
   </div>
 </div>
+
+{{vendor | json}}
 
 <div class="row">
   <div class="col-md-12">
