--- a/frontend/src/css/style.css
+++ b/frontend/src/css/style.css
@@ -17,7 +17,6 @@ body {
   }
 }
 
-
 #page-wrapper {
   width: 100%;
   min-height: calc(100vh - 50px);
@@ -43,6 +42,10 @@ body {
 
 .logout-button {
   margin-right: 30px;
+}
+
+.bottom-space {
+  margin-bottom: 1em;
 }
 
 /* Side Navigation */
