--- a/frontend/src/app/informationComponents/vendorInfo.component.html
+++ b/frontend/src/app/informationComponents/vendorInfo.component.html
@@ -59,3 +59,45 @@
     </ckeditor>
   </div>
 </div>
+
+<div class="row">
+  <div class="col-md-12">
+    <h3 class="page-header">
+      <i class="fa fa-list" aria-hidden="true"></i> Faktentabelle
+      <small>{{maxFactsEntriesTag}}</small>
+    </h3>
+  </div>
+</div>
+
+<div class="row">
+  <div class="col-md-12">
+    <table class="table table-striped table-hover">
+      <thead>
+      <tr>
+        <th>Feature</th>
+        <th>Beschreibung</th>
+        <th>Aktionen</th>
+      </tr>
+      </thead>
+      <tbody>
+      <tr *ngFor="let fact of vendor.facts; let i = index">
+        <td>{{fact | key}}</td>
+        <td>{{fact | value}}</td>
+        <td>
+          <div class="btn-group" role="group">
+            <a type="button" class="btn btn-default"><i class="fa fa-pencil" aria-hidden="true"></i></a>
+            <a type="button" class="btn btn-default"><i class="fa fa-arrow-up" aria-hidden="true"></i></a>
+            <a type="button" class="btn btn-default"><i class="fa fa-arrow-down" aria-hidden="true"></i></a>
+            <a type="button" class="btn btn-danger"><i class="fa fa-ban" aria-hidden="true"></i></a>
+          </div>
+        </td>
+      </tr>
+      <tr>
+        <td><input class="form-control" type="text" name="newFactName" placeholder="Name"/></td>
+        <td><input class="form-control" type="text" name="newFactDescription" placeholder="Beschreibung"/></td>
+        <td><a class="btn btn-primary"><i class="fa fa-plus" aria-hidden="true"></i> Fakt hinzufügen</a></td>
+      </tr>
+      </tbody>
+    </table>
+  </div>
+</div>
