--- a/frontend/src/app/informationComponents/vendorInfo.component.html
+++ b/frontend/src/app/informationComponents/vendorInfo.component.html
@@ -9,7 +9,7 @@
 
 <div class="row bottom-space">
   <div class="col-md-12">
-    <a class="btn btn-primary"><i class="fa fa-floppy-o" aria-hidden="true"></i> Speichern</a>
+    <a class="btn btn-primary" (click)="saveVendor()"><i class="fa fa-floppy-o" aria-hidden="true"></i> Speichern</a>
     <a class="btn btn-warning"><i class="fa fa-ban" aria-hidden="true"></i> Verwerfen</a>
   </div>
 </div>
