vendor info page is base page, brand image links to base page

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -18,7 +18,7 @@
       <!-- Sidebar Menu Items - These collapse to the responsive navigation menu on small screens -->
       <div class="collapse navbar-collapse navbar-ex1-collapse">
         <div class="logo-container">
-          <img src="img/logo.jpg" class="logo">
+          <a [routerLink]="['']"><img src="img/logo.jpg" class="logo"></a>
         </div>
         <ul class="nav navbar-nav side-nav" *ngIf="userService.isLoggedIn">
           <li [routerLinkActive]="['active']">
