--- a/frontend/src/app/navigation/navigation.component.html
+++ b/frontend/src/app/navigation/navigation.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
   <div class="container-fluid">
     <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
+      <button type="button" class="navbar-toggle" (click)="isCollapsed = !isCollapsed">
         <span class="sr-only">Toggle navigation</span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
@@ -9,14 +9,18 @@
       </button>
     </div>
     <!-- Top Menu Items -->
-    <div class="navbar-form navbar-right" *ngIf="userService.isLoggedIn">
+    <div class="navbar-form navbar-right hidden-xs" *ngIf="userService.isLoggedIn">
       <a class="btn btn-danger logout-button" (click)="userService.logout()">
         <i class="fa fa-sign-out" aria-hidden="true"></i> Logout
       </a>
     </div>
     <!-- Sidebar Menu Items - These collapse to the responsive navigation menu on small screens -->
-    <div class="collapse navbar-collapse navbar-ex1-collapse">
-      <div class="logo-container">
+    <div class="collapse navbar-collapse"
+         (collapsed)="collapsed($event)"
+         (expanded)="expanded($event)"
+         [collapse]="isCollapsed">
+
+      <div class="logo-container hidden-xs">
         <a [routerLink]="['']"><img src="img/logo.jpg" class="logo"></a>
       </div>
       <ul class="nav navbar-nav side-nav" *ngIf="userService.isLoggedIn">
