--- a/frontend/src/css/style.css
+++ b/frontend/src/css/style.css
@@ -43,7 +43,7 @@ body {
     width: 225px;
     margin-left: -225px;
     border: none;
-    border-radius: 0px 20px 0px 0px;
+    border-radius: 0 20px 0 0;
     overflow-y: auto;
     background-color: #f0f2f2;
     bottom: 0;
@@ -74,7 +74,7 @@ body {
 }
 
 .side-nav > li > ul > li > a:hover {
-  color: #fff;
+  color: #777;
 }
 
 /* Flot Chart Containers */
@@ -162,7 +162,7 @@ body {
 }
 
 .factshead {
-  font-family: "Arial Black", Arial Black;
+  font-family: "Arial Black", Arial Black, sans-serif;
 }
 
 #facts {
